add unique server icons